@@ -1,9 +1,0 @@
-#define off_width 32
-#define off_height 16
-static unsigned char off_bits[] = {
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0xc0, 0xe3, 0xef, 0x0f, 0x60, 0xc6, 0xcc, 0x0c, 0x30, 0xcc, 0xc8, 0x08,
-  0x30, 0xcc, 0xc2, 0x02, 0x30, 0xcc, 0xc3, 0x03, 0x30, 0xcc, 0xc2, 0x02,
-  0x30, 0xcc, 0xc0, 0x00, 0x60, 0xc6, 0xc0, 0x00, 0xc0, 0xe3, 0xe1, 0x01,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, };
